# FreeCellStudy

./: .gitmodules  CMakeLists.txt  README.md
1/: CMakeLists.txt  imgui.ini
1/src/: main.cpp
2/: CMakeLists.txt
2/src/: data.h  main.cpp
3/: CMakeLists.txt
3/src/: main.cpp
4/: CMakeLists.txt  imgui.ini
4/src/: main.cpp
5/: CMakeLists.txt
5/src/: main.cpp
6/: CMakeLists.txt
6/src/: main.cpp
common/: common.h  sprite.cpp  sprite.h
games/freecell/: CMakeLists.txt
games/freecell/assets/fonts/: font.fnt
games/freecell/src/: board.cpp  board.h  card.cpp  card.h  globals.cpp  globals.h  main.cpp  pile.cpp  pile.h  reserve.cpp  reserve.h  resources.cpp  resources.h  target.cpp  target.h
games/freecell/src_art/: sprite_sheet.aseprite
src/: main.c
